--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
     },
     "require": {
         "php": "^7.4",
+        "ext-json": "*",
         "psr/http-message": "^1.0",
-        "psr/http-client": "^1.0"
+        "psr/http-client": "^1.0",
+        "nyholm/psr7": "^1.3",
+        "symfony/serializer": "^5.0",
+        "symfony/property-access": "^5.0"
     }
 }
