--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "aso824\\OctoPrintPHP\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "aso824\\OctoPrintPHP\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": "^7.4",
         "ext-json": "*",
@@ -21,6 +26,10 @@
         "psr/http-client": "^1.0",
         "nyholm/psr7": "^1.3",
         "symfony/serializer": "^5.0",
-        "symfony/property-access": "^5.0"
+        "symfony/property-access": "^5.0",
+        "phpdocumentor/reflection-docblock": "^5.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.3"
     }
 }
